packages/typ/tests/fixtures/diagnostics/0966_mli_binary_type_underapplied_02.mli.expected
File "0966_mli_binary_type_underapplied_02.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0966_mli_binary_type_underapplied_02 is not a valid module name.

File "0966_mli_binary_type_underapplied_02.mli", line 2, characters 13-26:
2 | val x_beta : int pair_beta
                 ^^^^^^^^^^^^^
Error: The type constructor pair_beta expects 2 argument(s),
       but is here applied to 1 argument(s)
